--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Expedientes USJC</title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <link rel="icon" href="/logo.png" />
   </head>
   <body>
     <div id="root"></div>
